# wolle-economy-viewer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  app.py  data_lens_example  docker-compose.yml  economics.py  old_sql.sql  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
db/: connection.py  queries.py
pages/: 1_Заказы.py  2_Аналитика.py
src/wolle_economy/: __init__.py  config.py  enums.py  logging_setup.py
src/wolle_economy/db/: engine.py  queries.py
src/wolle_economy/domain/: economics.py  economics_mm.py  kpis.py  loader.py
src/wolle_economy/ui/: app.py  columns.py  formatters.py  helpers.py
src/wolle_economy/ui/components/analytics/: filters.py  render.py
src/wolle_economy/ui/components/analytics/tabs/: abc.py  cashflow.py  distribution.py  kpi.py  ops.py  pricing.py  returns.py  suppliers.py  trends.py
src/wolle_economy/ui/components/home/: kpis.py  navigation.py  trend.py
src/wolle_economy/ui/components/orders/: filters.py  filters_mm.py  metrics.py  metrics_mm.py  table.py  table_mm.py
src/wolle_economy/ui/pages/: 1_Заказы.py  2_Аналитика.py  3_Сводная.py
tests/: conftest.py  test_economics.py  test_economics_mm.py
